--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -16,3 +16,5 @@ actix-utils = "1.0.3"
 futures = "0.3.1"    
 env_logger = "0.7"    
 bytes = "0.5"
+
+sqlx = { version = "0.3", features = [ "mysql" ] }
