--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -17,6 +17,8 @@ futures = "0.3.1"
 env_logger = "0.7"    
 bytes = "0.5"
 
-sqlx = { version = "0.3", features = [ "mysql" ] }
+serde = { version = "1.0", features = [ "derive"] }
+serde_json="1.0"
+sqlx = { version = "0.3", features = [ "mysql", "chrono" ] }
 tera = "1.0"
-chrono = "0.4"
+chrono = {version = "0.4", features = ["serde"] }
