--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
 actix-rt = "1.0.0"    
 actix-web = "2.0.0"                                                                                                                                                                                                                           
 actix-files = "0.2.1"    
