--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -23,3 +23,5 @@ serde_json="1.0"
 sqlx = { version = "0.3", features = [ "mysql", "chrono" ] }
 tera = "1.0"
 chrono = {version = "0.4", features = ["serde"] }
+rand = "0.7.3"
+rust-crypto = "0.2.36"
