--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0"
 actix-rt = "1.0.0"    
-actix-web = "2.0.0"                                                                                                                                                                                                                           
+actix-web = "2.0.0"                                                                                                                                                                                                                     
+
 actix-files = "0.2.1"    
 actix-session = "0.3.0"    
 actix-utils = "1.0.3"    
+actix-multipart = "0.2.0"
     
 futures = "0.3.1"    
 env_logger = "0.7"    
